del pycash from Config

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 __pycache__/
+C:\Users\Pavel\PycharmProjects\TDElenaParser\Parser\__pycache__
 # intellij configs
 .idea/
 # folder with parsing results files
