some refact in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 __pycache__/
-C:\Users\Pavel\PycharmProjects\TDElenaParser\Parser\__pycache__
-C:\Users\Pavel\PycharmProjects\TDElenaParser\Parser\Config\__pycache__
+Parser\__pycache__/
+Parser\Config\__pycache__/
 # intellij configs
 .idea/
 # folder with parsing results files
